--- a/interface.pug
+++ b/interface.pug
@@ -1,4 +1,4 @@
-doctype html
+'doctype html
 html(lang="pt-BR")
   head
     meta(charset="UTF-8")
@@ -150,3 +150,4 @@ html(lang="pt-BR")
           }
       });
 
+'
